# super-waffle

Core/: CMakeLists.txt  Random.cpp  Random.h
actions_prototype/: Demo.cpp
client/: CMakeLists.txt  client.cpp
cmake/: FindPugiXML.cmake  FindSDL2.cmake  FindSDL2_net.cmake
server/: CMakeLists.txt  server.cpp
server/boost_beast/: CMakeLists.txt
sidescroller/: CMakeLists.txt  Demo.cpp  Demo.h  main.cpp
sidescroller/Actions/: ActionManager.cpp  ActionManager.h  Actor.cpp  CMakeLists.txt  Delay.h  Parallel.cpp  Parallel.h  Repeat.cpp  Sequence.cpp  Sequence.h
sidescroller/Agent/: Agent.cpp  Agent.h  AgentPool.cpp  AgentPool.h  AgentTag.h  CMakeLists.txt
sidescroller/Agent/BaseSystems/: AgentController.cpp  AgentController.h  AgentDrawer.cpp  AgentDrawer.h  BaseAgentSystem.cpp  BaseAgentSystem.h  GravitySystem.cpp  GravitySystem.h
sidescroller/CharacterParser/: CMakeLists.txt  CharacterParser.cpp  CharacterParser.h
sidescroller/Config/: MAP_VERSION1.txt  PROTOTYPE_MAP.txt
sidescroller/CustomActions/: SpriteActionMacro.h  SpriteActions.h
sidescroller/GameFramework/: CMakeLists.txt
sidescroller/GameFramework/Common/: TraitsHelper.hpp
sidescroller/GameFramework/Entita/: BaseSystem.h  CMakeLists.txt  ComponentId.h  Entity.h  Pool.cpp  Pool.h
sidescroller/GameFramework/Framework/: Context.h  Context.hpp  Director.cpp  Director.h  IScene.h  ResourcesMgr.cpp  ResourcesMgr.h  SceneController.cpp  SceneController.h
sidescroller/GameFramework/Math/: Easing.cpp  Easing.h  RangeMap.hpp
sidescroller/GameFramework/System/: Camera.cpp  Camera.h  Random.cpp  Random.h
sidescroller/GameWorld/Components/: Agent.h  ArrowController.h  Body.cpp  Body.h  Bullet.h  Collidable.cpp  Collidable.h  Components.h  Drawable.h  Jumpable.h  Movable.h  SimpleAIController.h  Tile.h  Weapon.h
sidescroller/GameWorld/EntityFactory/: EntityFactory.cpp  EntityFactory.h
sidescroller/GameWorld/Scenes/: Animation.cpp  Animation.h  AnimationUtilities.cpp  AnimationUtilities.h  CharacterInfo.cpp  CharacterInfo.h  Fireball.cpp  Fireball.h  GameEditorScene.cpp  GameEditorScene.h  GameScene.cpp  GameScene.h  HealthBar.cpp  HealthBar.h  Knight.cpp  Knight.h  KnightAnimationState.cpp  KnightAnimationState.h  Map.cpp  Map.h  Scenes.h  Slash.cpp  Slash.h  Zombie.cpp  Zombie.h  ZombieAnimationState.cpp  ZombieAnimationState.h  ZombieInfo.h
sidescroller/GameWorld/Systems/: AIControlSystem.cpp  AIControlSystem.h  AttackSystem.cpp  CollisionSystem.cpp  CollisionSystem.h  DrawSystem.cpp  EnemySpawnSystem.cpp  MoveSystem.cpp  MoveSystem.h  Systems.h
sidescroller/Libraries/: CMakeLists.txt  variant.hpp
sidescroller/MapTemplate/: tileMap.txt
sidescroller/OLD/Actions/: ActionDescription.h  Actor.h  Delay.cpp  Repeat.h
sidescroller/OLD/CustomActions/: CMakeLists.txt  SpriteActions.cpp  SpriteTween.hpp
sidescroller/OLD/GameWorld/: CMakeLists.txt
sidescroller/OLD/GameWorld/Components/: Body.h  Components.h  Drawable.cpp  Drawable.h  Enemy.h  Player.h  Skin.h  WASDController.h  Weapon.h
sidescroller/OLD/GameWorld/EntityFactory/: EntityFactory.cpp  EntityFactory.h
sidescroller/OLD/GameWorld/Scenes/: GameScene.cpp  GameScene.h
sidescroller/OLD/GameWorld/Systems/: AnimationSystem.cpp  AnimationSystem.h  AttackSystem.cpp  AttackSystem.h  DrawSystem.cpp  DrawSystem.h  EnemySpawnSystem.cpp  EnemySpawnSystem.h  MoveSystem.cpp  Systems.h
sidescroller/OLD/Tweeny/: Comparators.h  TweenWrap.hpp
sidescroller/PhysicsBox2D/: Box2DWorld.cpp  Box2DWorld.h  CMakeLists.txt
sidescroller/TileMap/: BaseTileMap.cpp  BaseTileMap.h  CMakeLists.txt
sidescroller/TileMap/Editor/: TileEditor.cpp  TileEditor.h
sidescroller/TileMap/ExportFiles/: TILE_MAP_TEST.txt
sidescroller/TileMap/Map/: TileMap.cpp  TileMap.h
sidescroller/Tweeny/: CMakeLists.txt  Easing.cpp  Easing.h  RangeMap.hpp  Tweeny.hpp
timelinefx/: CMakeLists.txt  main.cpp
timelinefx/DataStructures/: CMakeLists.txt  SlotMap.hpp
timelinefx/Events/: CMakeLists.txt  EventList.cpp  EventList.h  EventMap.hpp
timelinefx/Libraries/Actions/: ActionDescription.h  ActionManager.cpp  ActionManager.h  Delay.cpp  Delay.h  Parallel.cpp  Parallel.h  Repeat.cpp  Repeat.h  Sequence.cpp  Sequence.h
timelinefx/Libraries/Common/: ConstexprIf.hpp  TypeTraits.hpp
timelinefx/Libraries/Random/: Random.cpp  Random.h
timelinefx/Libraries/Tweeny/: Comparators.h  Easing.cpp  Easing.h  RangeMap.hpp
timelinefx/ParticleTimelineFX/: CMakeLists.txt  EffectLibrary.cpp  EffectLibrary.h  Image.cpp  Image.h  Particle.cpp  Particle.h  ParticleManager.cpp  ParticleManager.h
timelinefx/ParticleTimelineFX/DataParser/: CMakeLists.txt  TLFXEffectsLibrary.cpp
timelinefx/Sprite/: CMakeLists.txt  Sprite.cpp  Sprite.h
timelinefx/Sprite/Actions/: MoveBy.cpp  MoveBy.h  ScaleBy.cpp  ScaleBy.h
timelinefx/Sprite/Batcher/: SpriteBatcher.h
timelinefx/SpriteBatcher/: Batch.cpp  Batch.h  CMakeLists.txt  SpriteBatcher.cpp
timelinefx/assets/explosions1/: data.xml  explosion_ids.txt
timelinefx/assets/explosions1/Thumbnails/: .directory
timelinefx/assets/explosions2/: .directory
timelinefx/assets/explosions2/Thumbnails/: .directory
timelinefx/assets/missles/: data.xml
timelinefx/assets/missles/Thumbnails/: .directory
timelinefx/assets/shoot_em_up/: data.xml
timelinefx/assets/shoot_em_up/Thumbnails/: .directory
timelinefx/core/: CMakeLists.txt  core.cpp  event.hpp  loose_grid.cpp  loose_grid.h  slot_map.hpp
timelinefx/core/data_structures/: IntList.cpp  IntList.h  QuadTree.cpp  QuatTree.h
timelinefx/sfml_sprite_batcher/: Batch.cpp  Batch.h  CMakeLists.txt  SpriteBatcher.cpp  SpriteBatcher.h
timelinefx/timelinefx_parser/: TLFXParticleManager.cpp
timelinefx/timelinefx_parser_starting_point/: CMakeLists.txt  Gradient.cpp  Gradient.h  tlEmitter.cpp  tlEmitter.h  tlEntity.cpp  tlEntity.h  tlLibrary.cpp  tlParticle.h  tlParticleManager.cpp  tlParticleManager.h
timelinefx/timelinefx_sfml/: CMakeLists.txt  EffectLibrary.cpp  EffectLibrary.h  Image.cpp  Image.h  ParticleManager.cpp  ParticleManager.h
